--- a/kody/p3.html
+++ b/kody/p3.html
@@ -12,8 +12,8 @@ Poradniki na triki
 
     <div class="p3a">
         Ollie
-
-ada
+        <div class = "iframe"><iframe width="420" height="350" src="https://www.youtube.com/embed/watch?v=QkeOAcj8Y5k">
+        
         
         Ollie to absolutny fundament jazdy na deskorolce. 
         To pierwszy trik, który skaterzy uczą się,
