--- a/kody/p3.html
+++ b/kody/p3.html
@@ -12,7 +12,7 @@ Poradniki na triki
 
     <div class="p3a">
         Ollie
-        <div class = "iframe"><iframe width="420" height="350" src="https://www.youtube.com/embed/watch?v=QkeOAcj8Y5k">
+        <div class = "iframe">as<iframe width="420" height="350" src="https://www.youtube.com/embed/watch?v=QkeOAcj8Y5k">
         
         
         Ollie to absolutny fundament jazdy na deskorolce. 
