--- a/kody/index.html
+++ b/kody/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        Jazda na desce
+        Jazda na desceaa
     </div>
 
     <div class="blok-container">
