--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        Jazda na desceA
+        Jazda na desce
     </div>
 
     <div class="blok-container">
