--- a/p3.html
+++ b/p3.html
@@ -14,13 +14,8 @@ Poradniki na triki
         Ollie
         <div class = "iframe"><iframe width="420" height="350" src="https://www.youtube.com/embed/QkeOAcj8Y5k">
         
-        Ollie to absolutny fundament jazdy na deskorolce. 
-        To pierwszy trik, który skaterzy uczą się,
-         ponieważ jest podstawą do większości innych trików.
-          Polega na tym, że unosisz deskę w powietrze bez dotykania jej rękami, co pozwala na skakanie nad przeszkodami lub wykonywanie bardziej zaawansowanych trików. 
-          Kluczem do sukcesu jest odpowiednia synchronizacja nacisku tylnej nogi i wyciągnięcia przedniej, aby unieść deskę.
-        
-        Chociaż może wydawać się to proste, Ollie wymaga precyzji i koordynacji. Wymaga również pewnej odwagi, zwłaszcza na początku, kiedy trudno opanować balans w powietrzu. Trening Ollie to pierwszy krok na drodze do stania się prawdziwym skaterem – ćwicz regularnie, a z czasem zaczniesz wykonywać ten trik z lekkością.
+        Kickflip
+        <div class = "iframe"><iframe width="420" height="350" src="https://www.youtube.com/embed/jxTGfQT6-lU&t=22s"></iframe>
     </div>
 </div>
 
