--- a/p3.html
+++ b/p3.html
@@ -13,8 +13,11 @@ Poradniki na triki
     <div class="p3a">
         Ollie
         <div class = "iframe"><iframe width="420" height="350" src="https://www.youtube.com/embed/QkeOAcj8Y5k">
+        </div>
+        <div class="p3a">
+            Kickflip
+        </div>
         
-        Kickflip
         <div class = "iframe"><iframe width="420" height="350" src="https://www.youtube.com/embed/jxTGfQT6-lU&t=22s"></iframe>
     </div>
 </div>
