--- a/p3.html
+++ b/p3.html
@@ -7,6 +7,10 @@
     <link rel= "stylesheet" href= "style.css">
 </head>
 <body>
+    <div class="gbm">
+        <img src="deska.png" width="40px">
+        <Script src="gbm.js"></Script>
+        </div>
 <div class ="header">
 Poradniki na triki 
 
@@ -27,7 +31,10 @@ Poradniki na triki
         <div class="gb2">Tricki</div>
         <div class="gb0">Strona glowna</div>
     </div>
-
+    <div class="kot">
+        <img src="kots.png" alt="Statyczny kot" id="kot-img">
+    <script src="kot.js"></script>
+    </div>
     <script src="o.js"></script>
 </body>
 </html>
