--- a/podstrona.html
+++ b/podstrona.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="gbm">
+        <img src="deska.png" width="40px">
+        <Script src="gbm.js"></Script>
+        </div>
     <div class="podmain">
     <p>
         <li>1. Historia deskorolki
@@ -47,7 +50,10 @@
             <div class="gb0">Strona glowna</div>
             <script src="m.js"></script>
         </div>
-    
+        <div class="kot">
+            <img src="kots.png" alt="Statyczny kot" id="kot-img">
+        <script src="kot.js"></script>
+        </div>
     </div>
     </body>
 </html>
